# good-job

./: .gitignore  Dashboard.py  README.md  dashboard.py  example.env  pyproject.toml
pages/: Uploader.py  file.py  uploader.py
